syntax = "proto3";

package service_component;

option go_package = "service-component/pb;pb";

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
}